# rocha_registry

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: qodana_code_quality.yml
app/: config.py  db.py  dependencies.py  main.py
app/api/: auth.py  blobs.py  manifests.py
app/models/: blob.py  manifest.py  user.py
app/schemas/: auth.py
app/services/: auth_service.py  blob_service.py  garbage_collector.py  manifest_service.py
