[project]
name = "rocha-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "minio>=7.2.15",
    "passlib>=1.7.4",
    "prometheus-client>=0.22.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-jose>=3.5.0",
    "redis>=6.2.0",
    "sqlmodel>=0.0.24",
]
